test/fail/actor-reference-colon.mo
// actor references

let _ = actor "CI";  // missing colon
